# vharfbuzz

./: .readthedocs.yml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  test.yml
Lib/vharfbuzz/: __init__.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat
lib/vharfbuzz/: __init__.py
